--- a/micronaut-cli.yml
+++ b/micronaut-cli.yml
@@ -3,4 +3,4 @@ defaultPackage: com.devlhse
 testFramework: junit
 sourceLanguage: kotlin
 buildTool: gradle
-features: [annotation-api, app-name, data, data-jpa, gradle, http-client, jdbc-hikari, junit, kotlin, kotlin-application, kotlin-build, logback, micronaut-build, netty-server, postgres, readme, shade, testcontainers, yaml]
+features: [annotation-api, app-name, data, data-jpa, gradle, http-client, jdbc-hikari, junit, kotlin, kotlin-application, kotlin-build, logback, micronaut-build, netty-server, postgres, readme, security-annotations, security-jwt, shade, testcontainers, yaml]
